--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Start Your Day With Presence | Eckhart Tolle On Everyday Presence (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">33 minutes ago</div>
+                        <div class="date">50 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Do Aliens Exist? Commander Sunita Williams & Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">38 minutes ago</div>
+                        <div class="date">55 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Commander Sunita Williams & Sadhguru Explore Aliens, Space Missions & Consciousness</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle's A Guide to Stress Free Living</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Juicy. Melty. Perfect. Cheeseburger #food #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>What taxes will they increase at the Budget next month?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -761,7 +761,7 @@
                     <div class="video-info">
                         <h3>Why Labour are so unpopular</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>What taxes will they increase at the Budget next month?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5336,7 +5336,7 @@
                         <div class="video-info">
                             <h3>Why Labour are so unpopular</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Start Your Day With Presence | Eckhart Tolle On Everyday Presence (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">33 minutes ago</div>
+                            <div class="date">50 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Do Aliens Exist? Commander Sunita Williams & Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">38 minutes ago</div>
+                            <div class="date">55 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Commander Sunita Williams & Sadhguru Explore Aliens, Space Missions & Consciousness</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7293,7 +7293,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle's A Guide to Stress Free Living</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Juicy. Melty. Perfect. Cheeseburger #food #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
